# OpenCV

./: .gitignore
Binary_Image_Processing/: CMakeLists.txt
Binary_Image_Processing/BlobDetection/: CMakeLists.txt  blobDetection.cpp
Binary_Image_Processing/CoinDetection_Assignment_A/: CMakeLists.txt  Coin_Detection_Assignments_A.cpp
Binary_Image_Processing/CoinDetection_Assignment_B/: CMakeLists.txt  Coin_Detection_Assignments_B.cpp
Binary_Image_Processing/ConnectedComponentAnalysis/: CMakeLists.txt  connectedComponentAnalysis.cpp
Binary_Image_Processing/Contours/: CMakeLists.txt  contours.cpp
Binary_Image_Processing/ErosionDilation/: CMakeLists.txt  erosionDilation.cpp
Binary_Image_Processing/MorphologicalOperations/: CMakeLists.txt  morphologicalOperatios.cpp
Binary_Image_Processing/OpeningClosing/: CMakeLists.txt  openingClosing.cpp
Binary_Image_Processing/StructuringElementAssignment/: CMakeLists.txt  erosionDilation_Assignment.cpp
Binary_Image_Processing/Thresholding/: CMakeLists.txt  Timer.hpp  thresholding.cpp
Callback_Functions/: CMakeLists.txt
Callback_Functions/Excercise/: CMakeLists.txt  submission.cpp
Callback_Functions/Keyboard/: CMakeLists.txt  Using_Keyboard_as_input_device.cpp
Callback_Functions/Mouse/: CMakeLists.txt  Using_Mouse_for_annotation.cpp
Callback_Functions/Trackbar/: CMakeLists.txt  Trackbar.cpp
Image_Annotation/: CMakeLists.txt
Image_Annotation/Add_Text/: CMakeLists.txt  add_text.cpp
Image_Annotation/Circle/: CMakeLists.txt  circle.cpp
Image_Annotation/Ellipse/: CMakeLists.txt  ellipse.cpp
Image_Annotation/Line/: CMakeLists.txt  line.cpp
Image_MathOperation/: CMakeLists.txt
Image_MathOperation/Brightness_Enhancement/: CMakeLists.txt  brightness_enhancement.cpp
Image_MathOperation/Contrast_Enhancement/: CMakeLists.txt  contrast_enhancement.cpp
Image_MathOperation/Normalization/: CMakeLists.txt  normalization.cpp
Image_Operation/: CMakeLists.txt
Image_Operation/Image_Create/: CMakeLists.txt  Image_Create.cpp
QR_Code_Detector/: CMakeLists.txt  QR_Code_Detector.cpp
Sample-Code-Cpp/: .CMakeLists_Old.txt.swp  CMakeLists.txt  Readme.txt
Sunglass_Filter/: CMakeLists.txt
Video-IO/: CMakeLists.txt
(+16 files in other folders)
