cmake_minimum_required(VERSION 3.0.0)
project( Binary_Image_Processing )
ADD_SUBDIRECTORY( BlobDetection )
ADD_SUBDIRECTORY( ConnectedComponentAnalysis )
ADD_SUBDIRECTORY( Contours )
ADD_SUBDIRECTORY( ErosionDilation )
ADD_SUBDIRECTORY( MorphologicalOperations )
ADD_SUBDIRECTORY( OpeningClosing )
ADD_SUBDIRECTORY( Thresholding )
ADD_SUBDIRECTORY( StructuringElementAssignment )
ADD_SUBDIRECTORY( CoinDetection_Assignment_A )
ADD_SUBDIRECTORY( CoinDetection_Assignment_B )
